tf/main.tf
provider "aws" {
}

resource "aws_vpc" "my-vpc" {
  cidr_block       = "10.0.0.0/16"

  tags {
    Name = "my-vpc"
  }
}

resource "aws_subnet" "my-subnet" {
  vpc_id     = "${aws_vpc.my-vpc.id}"
  cidr_block = "10.0.1.0/24"

  tags {
    Name = "my-subnet"
  }
}

resource "aws_security_group" "my-security-group" {
  name = "my-security-group"

  tags {
    Name = "my-security-group"
  }

  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  vpc_id = "${aws_vpc.my-vpc.id}"

}

resource "aws_instance" "my-server" {
  ami = "${var.ami}"
  instance_type = "t2.micro"

  tags {
    Name = "my-server"
  }

  security_groups = ["${aws_security_group.my-security-group.id}"]
  subnet_id = "${aws_subnet.my-subnet.id}"
}
